# bevy-procedural-animation

./: Cargo.toml
assets/shaders/: custom_material.frag  custom_material.wgsl  line_shader.wgsl  test_material.wgsl
src/: main.rs  stickman.rs  stickman_transform.rs  systems.rs  utils.rs
