[package]
name = "bevy-procedural-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.20.0"
bevy_flycam = "0.11.0"
#might add was
bevy_rapier3d = {version = "0.22.0", features = ["parallel", "simd-stable", "debug-render-3d"]}
rayon = "1.8.0"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1
