[package]
name = "bevy-procedural-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_flycam = "0.12.0"
#might add wasm stuff + simd-nightly for more cross compatibility
bevy_rapier3d = {version = "0.24.0", features = ["parallel", "simd-stable", "debug-render-3d", "serde-serialize"]}
rayon = "1.8.0"
smallvec = "1.11.1"

[patch.crates-io]
rapier3d = { git = "https://github.com/AnonymousAcid7787/rapier", branch = "fix-joint-inaccuracy"}


[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
